import existing code from customer project

--- a/versions/versions.cfg
+++ b/versions/versions.cfg
@@ -3,7 +3,14 @@ extends = ztk-versions-1.1.4.cfg
 versions = versions
 
 [versions]
+Fabric = 1.4.0
+Mako = 0.6.2
+MarkupSafe = 0.15
 Sphinx = ${versions:sphinx}
+buildout-versions = 1.7
 gocept.package = 1.0
+mock = 0.8.0
 pkginfo = 0.8
+pycrypto = 2.5
 sphinx = 1.1.2
+ssh = 1.7.13
