Experiment with a resource-based, puppet-inspired component model.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ extends = versions/versions.cfg
 parts =
     doc
     test
+    batou
 develop = .
 allow-picked-versions = false
 
@@ -11,6 +12,10 @@ recipe = zc.recipe.egg
 eggs = gocept.package [doc]
        batou
 scripts = doc
+
+[batou]
+recipe = zc.recipe.egg
+eggs = batou
 
 [test]
 recipe = zc.recipe.testrunner
