Split off the examples into separate component directories.
Get a supervisor running.

--- a/examples/hello/environments/dev.cfg
+++ b/examples/hello/environments/dev.cfg
@@ -1,2 +1,5 @@
 [hosts]
-localhost = hello, restrictedhello, deliverance
+localhost = hello, restrictedhello, deliverance, supervisor
+
+[component:supervisor]
+user_init = False
