Haproxy component, platform concept, smaller improvements:
- Migrate haproxy component from old batou to new component infrastructure.
  Simplify it a bit by ripping out backend classes and only have a default
  pool of servers.

- Add 'expand' template method back on components.

- Add 'platform' mechanism to provide environment-specific customisation of
  components. This is somewhat inspired by puppet's resource abstraction
  layer's providers.

- Implement filtering 'find_hooks' by host again.

- Factor out code that ensures a path is absent.

- Add component to create symlinks.

- Add goceptnet-specific component for haproxy.

--- a/examples/hello/environments/dev.cfg
+++ b/examples/hello/environments/dev.cfg
@@ -1,5 +1,4 @@
-[hosts]
-localhost = hello, restrictedhello, deliverance, supervisor
+[environment]
 
-[component:supervisor]
-user_init = False
+[hosts]
+localhost = hello, restrictedhello, deliverance, supervisor, haproxy
