Work on getting remoting to function again.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,9 +3,15 @@ extends = versions/versions.cfg
 parts =
     doc
     test
+    tags
     batou
 develop = .
 allow-picked-versions = false
+index = http://f.pypi.python.org/simple
+
+[tags]
+recipe = z3c.recipe.tag:tags
+eggs = batou
 
 [doc]
 recipe = zc.recipe.egg
