--- a/examples/hello/environments/staging.cfg
+++ b/examples/hello/environments/staging.cfg
@@ -5,4 +5,5 @@ branch = resource-based-model
 platform = goceptnet
 
 [hosts]
-test02 = hello
+test01 = hello, restrictedhello, deliverance, supervisor, haproxy
+test02 = deliverance, supervisor
