Start using PyPI-Sphinx-upload to automate documentation uploads.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,6 +22,8 @@ scripts = doc
 [batou]
 recipe = zc.recipe.egg
 eggs = batou
+	Sphinx-PyPI-upload
+interpreter = py
 
 [test]
 recipe = zc.recipe.testrunner
