Improve hello world tutorial: syntax highlighting and explicitly showing file content versus commands.

--- a/examples/tutorial-helloworld/buildout.cfg
+++ b/examples/tutorial-helloworld/buildout.cfg
@@ -10,7 +10,7 @@ auto-checkout = *
 sources-dir = dev
 
 [sources]
-batou = hg ../../
+batou = hg https://bitbucket.org/gocept/batou
 
 [versions]
 batou = 
