Get component tutorial working. Make suitable for presentation.

--- a/examples/tutorial-component/components/supervisor/buildout.cfg
+++ b/examples/tutorial-component/components/supervisor/buildout.cfg
@@ -3,14 +3,17 @@ parts = supervisor
 versions = versions
 allow-picked-versions = false
 
+[supervisor]
+recipe = collective.recipe.supervisor
+programs = {% for program in component.programs %}
+    {{loop.index}} prog{{loop.index}} {{program}} true
+{% endfor %}
+
 [versions]
 collective.recipe.supervisor = 0.17
 meld3 = 0.6.8
 setuptools = 0.6c12dev_r88846
+distribute = 0.6.27
 supervisor = 3.0a12
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
-
-[supervisor]
-recipe = collective.recipe.supervisor
-programs = {{'\n\t'.join(component.programs)}}
