improved the component example for better configuration of program parameters with supervisor, extended the tutorial to explain provide/require

--- a/examples/tutorial-component/components/supervisor/buildout.cfg
+++ b/examples/tutorial-component/components/supervisor/buildout.cfg
@@ -6,7 +6,7 @@ allow-picked-versions = false
 [supervisor]
 recipe = collective.recipe.supervisor
 programs = {% for program in component.programs %}
-    {{loop.index}} prog{{loop.index}} {{program}} true
+    {{program['priority']}} {{program['name']}} {{program['path']}} true
 {% endfor %}
 
 [versions]
