Try to overflow SSH buffers to see whether we get any data through.

--- a/examples/tutorial-component/buildout.cfg
+++ b/examples/tutorial-component/buildout.cfg
@@ -3,14 +3,14 @@ parts = batou
 allow-picked-versions = false
 versions = versions
 extensions = mr.developer
-
+develop = ../../
 sources = sources
 always-checkout = force
 auto-checkout = *
 sources-dir = dev
 
-[sources]
-batou = hg https://bitbucket.org/gocept/batou
+#[sources]
+#batou = hg https://bitbucket.org/gocept/batou
 
 [versions]
 batou = 
