Snapshot at porting secrets over.

--- a/versions/versions.cfg
+++ b/versions/versions.cfg
@@ -5,7 +5,9 @@ versions = versions
 [versions]
 Mako = 0.6.2
 MarkupSafe = 0.15
+SimpleAES = 0.2
 Sphinx = ${versions:sphinx}
+Sphinx-PyPI-upload = 0.2.1
 buildout-versions = 1.7
 gocept.package = 1.0
 mock = 0.8.0
@@ -14,4 +16,3 @@ pycrypto = 2.5
 sphinx = 1.1.2
 ssh = 1.7.13
 z3c.recipe.tag = 0.4.1
-Sphinx-PyPI-upload = 0.2.1
