Adapt gocept environment for secrets tutorial.

--- a/examples/tutorial-secrets/environments/gocept.cfg
+++ b/examples/tutorial-secrets/environments/gocept.cfg
@@ -1,8 +1,7 @@
 [environment]
 host_domain = gocept.net
 service_user = test2
-branch = remote-batch-mode
 
 [hosts]
-test01 = tick, supervisor
-test02 = tick, supervisor
+test01 = hello, secrets
+test02 = hello, secrets
