Add pep8 checking utility and make code conform.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,7 +23,10 @@ scripts = doc
 recipe = zc.recipe.egg
 eggs = batou
        Sphinx-PyPI-upload
+       flake8
 interpreter = py
+entry-points =
+    flake8=flake8.run:main
 
 [test]
 recipe = zc.recipe.testrunner
