--- a/versions/versions.cfg
+++ b/versions/versions.cfg
@@ -3,16 +3,20 @@ extends = ztk-versions-1.1.4.cfg
 versions = versions
 
 [versions]
+# Batou
 Mako = 0.6.2
 MarkupSafe = 0.15
 SimpleAES = 0.2
 Sphinx = ${versions:sphinx}
-Sphinx-PyPI-upload = 0.2.1
-buildout-versions = 1.7
-gocept.package = 1.0
 mock = 0.8.0
 pkginfo = 0.8
 pycrypto = 2.5
 sphinx = 1.1.2
 ssh = 1.7.13
+# Development / buildout
 z3c.recipe.tag = 0.4.1
+Sphinx-PyPI-upload = 0.2.1
+pyflakes = 0.5.0
+buildout-versions = 1.7
+gocept.package = 1.0
+flake8 = 1.3.1
