Also generate tags for packages we only built in dev.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,7 @@ index = http://f.pypi.python.org/simple
 
 [tags]
 recipe = z3c.recipe.tag:tags
-eggs = batou
+eggs = ${batou:eggs}
 
 [doc]
 recipe = zc.recipe.egg
