Work on re-usable Nagios components

--- a/src/batou/lib/resources/nagios.cfg
+++ b/src/batou/lib/resources/nagios.cfg
@@ -1,51 +1,25 @@
 # Generated from template; don't edit manually!
-
-{{ for check in component.checks }}
-
-# {{check.description}}
+{% for service in component.services %}
+#
+# {{service.description}}
 #
 define service {
     use         generic-service
-    host_name   {{check.host.name}}
-    service_description {{check.description}}
-    check_command {{check.check_command}}
-    servicegroups {{check.servicegroups}}
-@@ if check.notes_url
-    notes_url {{check.notes_url}}
-@@ endif
+    host_name   {{service.host.name}}
+    service_description {{service.description}}
+    check_command {{service.check_command}}
+    servicegroups {{service.servicegroups}}
+{% if service.notes_url %}
+    notes_url {{service.notes_url}}
+{% endif -%}
 }
-
-@@ for dependency in check.depend_on
+{% for dependency in service.depend_on %}
 define servicedependency {
     use generic-servicedependency
-    host_name {{dependency[0].name}}
+    host_name {{dependency['host'].name}}
     dependent_host_name {{check.host.name}}
-    service_description {{dependency[1]}}
+    service_description {{dependency['description']}}
     dependent_service_description {{check.description}}
 }
-@@ endfor
-@@ endfor
-### NRPE checks
-@@ for check in component.nrpe_checks
-#
-# {{check.description}}
-#
-define service {
-    use         generic-service
-    host_name   {{check.host.name}}
-    service_description {{check.description}}
-    check_command check_nrpe!{{check.name}}
-    servicegroups nrpe
-@@ if check.notes_url
-    notes_url {{check.notes_url}}
-@@ endif
-}
-
-define servicedependency {
-    use         generic-servicedependency
-    host_name   {{check.host.name}}
-    service_description NRPE
-    dependent_service_description {{check.description}}
-}
-
-@@ endfor
+{% endfor -%}
+{%- endfor -%}
