--- a/src/batou/lib/resources/nrpe.cfg
+++ b/src/batou/lib/resources/nrpe.cfg
@@ -1,4 +1,4 @@
 # Generated from template; don't edit manually!
-{% for service in component.services %}
+{% for service in component.services -%}
 command[{{service.name}}]={{service.nrpe_command}}
 {% endfor %}
