Add supervisor nagios plugin.

--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = supervisor
+parts = supervisor nagiosplugin
 newest = false
 versions = versions
 allow-picked-versions = false
@@ -14,6 +14,11 @@ superlance = 0.6
 supervisor = 3.0a12
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.2.2
+
+[nagiosplugin]
+recipe = zc.recipe.egg
+eggs = nagiosplugin
+interpreter = py
 
 [supervisor]
 recipe = collective.recipe.supervisor
