--- a/versions/versions.cfg
+++ b/versions/versions.cfg
@@ -12,8 +12,8 @@ mock = 0.8.0
 pkginfo = 0.8
 pycrypto = 2.6
 sphinx = 1.1.2
-ssh = 1.7.13
 configobj = 4.7.2
+paramiko = 1.8.0
 # Development / buildout
 z3c.recipe.tag = 0.4.1
 Sphinx-PyPI-upload = 0.2.1
