--- a/examples/tutorial-component/buildout.cfg
+++ b/examples/tutorial-component/buildout.cfg
@@ -19,10 +19,10 @@ distribute = 0.6.27
 mock = 1.0a2
 mr.developer = 1.21
 pycrypto = 2.6
-ssh = 1.7.14
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
 configobj = 4.7.2
+paramiko = 1.8
 
 [batou]
 recipe = zc.recipe.egg
