make supervisor buildout work if no eventlisteners are defined

--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -31,7 +31,9 @@ programs =
 {%- for program in component.programs %}
     {{ program.format(component) }}
 {% endfor -%}
+{% if component.eventlisteners %}
 eventlisteners =
 {% for listener in component.eventlisteners %}
     {{ listener.format(component) }}
 {% endfor %} 
+{% endif %}
