--- a/examples/tutorial-helloworld/buildout.cfg
+++ b/examples/tutorial-helloworld/buildout.cfg
@@ -15,11 +15,12 @@ batou = hg https://bitbucket.org/gocept/batou
 [versions]
 batou = 
 Jinja2 = 2.6
+configobj = 4.7.2
 distribute = 0.6.27
 mock = 1.0a2
 mr.developer = 1.21
+paramiko = 1.8.0
 pycrypto = 2.6
-ssh = 1.7.14
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
 
