Switch to regular Sphinx setup to allow switching to readthedocs.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,6 @@
 [buildout]
 extends = versions/versions.cfg
 parts =
-    doc
     test
     tags
     batou
@@ -13,17 +12,11 @@ index = http://f.pypi.python.org/simple
 recipe = z3c.recipe.tag:tags
 eggs = ${batou:eggs}
 
-[doc]
-recipe = zc.recipe.egg
-eggs = gocept.package [doc]
-       batou
-scripts = doc
-
 [batou]
 recipe = zc.recipe.egg
 eggs = batou
-       Sphinx-PyPI-upload
        flake8
+       sphinx
 interpreter = py
 entry-points =
     flake8=flake8.run:main
