Allow customizing supervisord's loglevel.

--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -27,6 +27,7 @@ serverurl = http://{{component.address.listen}}
 plugins = superlance
 logfile-maxbytes = 0
 logfile-backups = 0
+loglevel = {{component.loglevel}}
 programs =
 {%- for program in component.programs %}
     {{ program.format(component) }}
