Refactor supervisor: split reload/restart of master process and individual programs. Get rid of collective.recipe.supervisor and use a snippet directory for selective reloads.

--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -17,24 +17,8 @@ zc.recipe.egg = 1.2.2
 
 [nagiosplugin]
 recipe = zc.recipe.egg
-eggs = nagiosplugin
-interpreter = py
 
 [supervisor]
-recipe = collective.recipe.supervisor
-port = {{component.address.listen}}
-serverurl = http://{{component.address.listen}}
-plugins = superlance
-logfile-maxbytes = 0
-logfile-backups = 0
-loglevel = {{component.loglevel}}
-programs =
-{%- for program in component.programs %}
-    {{ program.format(component) }}
-{% endfor -%}
-{% if component.eventlisteners %}
-eventlisteners =
-{% for listener in component.eventlisteners %}
-    {{ listener.format(component) }}
-{% endfor %} 
-{% endif %}
+recipe = zc.recipe.egg
+eggs = supervisor
+    superlance
