Fix accidental static paths of my dev machine in supervisor template.

--- a/src/batou/lib/resources/supervisor.conf
+++ b/src/batou/lib/resources/supervisor.conf
@@ -1,10 +1,10 @@
 [supervisord]
-childlogdir = /Users/ctheune/gocept/code/multikarl.batou/work/supervisor/var/log
-logfile = /Users/ctheune/gocept/code/multikarl.batou/work/supervisor/var/log/supervisord.log
+childlogdir = {{component.workdir}/var/log
+logfile = {{component.workdir}/log/supervisord.log
 logfile_maxbytes = 0
 logfile_backups = 0
 loglevel = {{component.loglevel}}
-pidfile = /Users/ctheune/gocept/code/multikarl.batou/work/supervisor/var/supervisord.pid
+pidfile = {{component.workdir}/var/supervisord.pid
 umask = 022
 nodaemon = false
 nocleanup = false
