template fix, again

--- a/src/batou/lib/resources/supervisor.conf
+++ b/src/batou/lib/resources/supervisor.conf
@@ -1,10 +1,10 @@
 [supervisord]
-childlogdir = {{component.workdir}/var/log
-logfile = {{component.workdir}/log/supervisord.log
+childlogdir = {{component.workdir}}/var/log
+logfile = {{component.workdir}}/log/supervisord.log
 logfile_maxbytes = 0
 logfile_backups = 0
 loglevel = {{component.loglevel}}
-pidfile = {{component.workdir}/var/supervisord.pid
+pidfile = {{component.workdir}}/var/supervisord.pid
 umask = 022
 nodaemon = false
 nocleanup = false
