Fix #3. Now it works.

--- a/src/batou/lib/resources/supervisor.conf
+++ b/src/batou/lib/resources/supervisor.conf
@@ -1,6 +1,6 @@
 [supervisord]
 childlogdir = {{component.workdir}}/var/log
-logfile = {{component.workdir}}/log/supervisord.log
+logfile = {{component.workdir}}/var/log/supervisord.log
 logfile_maxbytes = 0
 logfile_backups = 0
 loglevel = {{component.loglevel}}
