Readd supervisor's custom Python interpreter to fix Nagios check.

--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -22,3 +22,5 @@ recipe = zc.recipe.egg
 recipe = zc.recipe.egg
 eggs = supervisor
     superlance
+# The interpreter is used by the Nagios check.
+interpreter = py
