Move supervisor pid file to /run/local
This ensure correct behaviour after system crashes. /run/local gets cleaned up
automatically on system boot.

--- a/src/batou/lib/resources/supervisor.conf
+++ b/src/batou/lib/resources/supervisor.conf
@@ -4,7 +4,7 @@ logfile = {{component.workdir}}/var/log/supervisord.log
 logfile_maxbytes = 0
 logfile_backups = 0
 loglevel = {{component.loglevel}}
-pidfile = {{component.workdir}}/var/supervisord.pid
+pidfile = {{component.pidfile}}
 umask = 022
 nodaemon = false
 nocleanup = false
