--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -6,12 +6,12 @@ allow-picked-versions = false
 
 [versions]
 collective.recipe.supervisor = 0.17
-distribute = 0.6.14
+distribute = 0.6.40
 meld3 = 0.6.8
-nagiosplugin = 0.4.4
+nagiosplugin = 0.4.5
 setuptools = 0.6c12dev-r88846
-superlance = 0.6
-supervisor = 3.0a12
+superlance = 0.7
+supervisor = 3.0b1
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.2.2
 
