--- a/.hgignore
+++ b/.hgignore
@@ -1,18 +1,7 @@
 syntax: glob
-
-*.egg-info
-.DS_Store
-*.pyc
-*.pyc
-*.swo
-*.swp
-.Python
+.batou.buildout.success
 .batou-lock
 .batou-passphrase
-.installed.cfg
-.mr.developer.cfg
-ID
-TAGS
 bin
 build
 coverage
@@ -20,14 +9,25 @@ dev
 develop-eggs
 dist
 doc/_api
+.DS_Store
+*.egg-info
 eggs
 examples/*/.batou-lock
 examples/*/local
 examples/*/work
+ID
 include/python2.*
-lib/python2.*
+.installed.cfg
 lib64
+lib/python2.*
 local
 local.cfg
+.mr.developer.cfg
 parts
+*.pyc
+*.pyc
+.Python
+*.swo
+*.swp
 tags
+TAGS
