Explicitly add resources to MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include README.txt
 include HACKING.txt
 include CHANGES.txt
 recursive-include src/batou/tests/fixture *
+recursive-include src/batou/lib/resources *
