Fix Nagios ServiceCheck dependency template.

--- a/src/batou/lib/resources/nagios.cfg
+++ b/src/batou/lib/resources/nagios.cfg
@@ -13,13 +13,13 @@ define service {
     notes_url {{service.notes_url}}
 {% endif -%}
 }
-{% for dependency in service.depend_on %}
+{% for host, description in service.depend_on %}
 define servicedependency {
     use generic-servicedependency
-    host_name {{dependency['host'].name}}
-    dependent_host_name {{check.host.name}}
-    service_description {{dependency['description']}}
-    dependent_service_description {{check.description}}
+    host_name {{host}}
+    dependent_host_name {{service.host.name}}
+    service_description {{description}}
+    dependent_service_description {{service.description}}
 }
 {% endfor -%}
 {%- endfor -%}
