--- a/versions/versions.cfg
+++ b/versions/versions.cfg
@@ -21,3 +21,8 @@ pyflakes = 0.5.0
 buildout-versions = 1.7
 gocept.package = 1.0
 flake8 = 1.3.1
+pytest = 2.3.5
+pytest-capturelog = 0.7
+pytest-codecheckers = 0.2
+pytest-cov = 1.6
+cov-core = 1.7
