--- a/buildout.cfg
+++ b/buildout.cfg
@@ -51,3 +51,9 @@ z3c.recipe.tag = 0.7
 zc.buildout = 2.1.0
 zc.recipe.egg = 2.0.0
 zope.cachedescriptors = 4.0.0
+# Compatibility to uninstall older buildout parts
+zc.recipe.testrunner = 2.0.0
+zope.testrunner = 4.4.0
+zope.interface = 4.0.5
+zope.exceptions = 4.0.6
+six = 1.3.0
