Implement secrets as environment overrides.
Part 1: support local runner.

--- a/examples/tutorial-secrets/environments/gocept.cfg
+++ b/examples/tutorial-secrets/environments/gocept.cfg
@@ -3,5 +3,5 @@ host_domain = gocept.net
 service_user = test2
 
 [hosts]
-test01 = hello, secrets
-test02 = hello, secrets
+test01 = hello
+test02 = hello
