Revamp bootstrap/buildout situation to make tutorials more robust.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,7 @@
 [buildout]
 parts = batou tags
+extends = versions.cfg
 develop = .
-index = http://f.pypi.python.org/simple
-allow-picked-versions = false
-show-picked-versions = true
-versions = versions
 
 [tags]
 recipe = z3c.recipe.tag:tags
@@ -17,43 +14,3 @@ eggs = batou
        sphinx
 interpreter = py
 dependent-scripts = true
-
-[versions]
-Jinja2 = 2.7
-Mako = 0.6.2
-MarkupSafe = 0.15
-Pygments = 1.6
-Sphinx = ${versions:sphinx}
-Sphinx-PyPI-upload = 0.2.1
-buildout-versions = 1.7
-configobj = 4.7.2
-cov-core = 1.7
-coverage = 3.6
-docutils = 0.10
-execnet = 1.1
-flake8 = 1.3.1
-gocept.package = 1.0
-mock = 1.0.1
-paramiko = 1.8.0
-pep8 = 1.4.5
-pkginfo = 0.8
-py = 1.4.14
-pycrypto = 2.6
-pyflakes = 0.7.2
-pytest = 2.3.5
-pytest-cache = 1.0
-pytest-capturelog = 0.7
-pytest-codecheckers = 0.2
-pytest-cov = 1.6
-setuptools = 0.8
-six = 1.3.0
-sphinx = 1.1.2
-z3c.recipe.tag = 0.7
-zc.buildout = 2.2
-zc.recipe.egg = 2.0.0
-zc.recipe.testrunner = 2.0.0
-zope.cachedescriptors = 4.0.0
-zope.exceptions = 4.0.6
-zope.interface = 4.0.5
-zope.testrunner = 4.4.0
-distribute = 0.7.3
