--- a/examples/tutorial-helloworld/buildout.cfg
+++ b/examples/tutorial-helloworld/buildout.cfg
@@ -1,41 +1,1 @@
-[buildout]
-parts = batou
-allow-picked-versions = false
-versions = versions
-extensions = mr.developer
-
-sources = sources
-always-checkout = force
-auto-checkout = *
-sources-dir = dev
-
-[sources]
-batou = hg https://bitbucket.org/gocept/batou
-
-[versions]
-batou = 
-Jinja2 = 2.6
-configobj = 4.7.2
-distribute = 0.6.27
-mock = 1.0a2
-mr.developer = 1.21
-paramiko = 1.8.0
-pycrypto = 2.6
-zc.buildout = 1.5.2
-zc.recipe.egg = 1.3.2
-
-zope.cachedescriptors = 4.0.0
-pytest-cov = 1.6
-pytest-codecheckers = 0.2
-pytest-capturelog = 0.7
-pytest = 2.3.5
-cov-core = 1.7
-pep8 = 1.4.6
-pyflakes = 0.7.3
-py = 1.4.15
-coverage = 3.6
-
-
-[batou]
-recipe = zc.recipe.egg
-eggs = batou
+../tutorial-component/buildout.cfg
