--- a/examples/tutorial-secrets/buildout.cfg
+++ b/examples/tutorial-secrets/buildout.cfg
@@ -1,9 +1,1 @@
-[buildout]
-parts = batou
-extends = ../../versions/versions.cfg
-develop = ../../
-
-
-[batou]
-recipe = zc.recipe.egg
-eggs = batou
+../tutorial-component/buildout.cfg
