--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE.txt
-include README.txt
+include README
 include HACKING.txt
 include CHANGES.txt
 recursive-include src/batou/tests/fixture *
