Work on getting remotes using execnet.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,15 @@ parts = batou tags
 extends = versions.cfg
 develop = .
 
+extensions = mr.developer
+sources = sources
+sources-dir = source
+auto-checkout = *
+always-checkout = force
+
+[sources]
+execnet = hg https://bitbucket.org/ctheune/execnet branch=sudo
+
 [tags]
 recipe = z3c.recipe.tag:tags
 eggs = ${batou:eggs}
