Improve test coverage for remoting a bit. Clean up.

--- a/versions.cfg
+++ b/versions.cfg
@@ -16,11 +16,13 @@ buildout-versions = 1.7
 configobj = 4.7.2
 cov-core = 1.7
 coverage = 3.6
+distribute = 0.7.3
 docutils = 0.10
 execnet = 1.1
 flake8 = 1.3.1
 gocept.package = 1.0
 mock = 1.0.1
+mr.developer = 1.25
 paramiko = 1.8.0
 pep8 = 1.4.5
 pkginfo = 0.8
@@ -32,6 +34,7 @@ pytest-cache = 1.0
 pytest-capturelog = 0.7
 pytest-codecheckers = 0.2
 pytest-cov = 1.6
+pytest-timeout = 0.3
 setuptools = 0.8
 six = 1.3.0
 sphinx = 1.1.2
@@ -43,5 +46,3 @@ zope.cachedescriptors = 4.0.0
 zope.exceptions = 4.0.6
 zope.interface = 4.0.5
 zope.testrunner = 4.4.0
-distribute = 0.7.3
-mr.developer = 1.25
