--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --tb=native --cov=src --cov-report=html src --junitxml=report.xml
+addopts = --timeout=10 --tb=native --cov=src --cov-report=html src --junitxml=report.xml
