--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,3 @@
 [pytest]
-addopts = --timeout=10 --tb=native --cov=src --cov-report=html src --junitxml=report.xml
+;addopts = --timeout=10 --tb=native --cov=src --cov-report=html src --junitxml=report.xml
+addopts =  --tb=native --cov=src --cov-report=html src --junitxml=report.xml
