Get timeout on pytest back, work around broken skipif calls. :/

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,2 @@
 [pytest]
-;addopts = --timeout=10 --tb=native --cov=src --cov-report=html src --junitxml=report.xml
-addopts =  --tb=native --cov=src --cov-report=html src --junitxml=report.xml
+addopts = --timeout=10 --tb=native --cov=src --cov-report=html --junitxml=report.xml src
