Update tutorial to match new buildout structures.

--- a/examples/tutorial-component/components/supervisor/buildout.cfg
+++ b/examples/tutorial-component/components/supervisor/buildout.cfg
@@ -12,8 +12,7 @@ programs = {% for program in component.programs %}
 [versions]
 collective.recipe.supervisor = 0.17
 meld3 = 0.6.8
-setuptools = 0.6c12dev_r88846
-distribute = 0.6.27
+setuptools =0.9.8
 supervisor = 3.0a12
-zc.buildout = 1.5.2
-zc.recipe.egg = 1.3.2
+zc.buildout = 2.20
+zc.recipe.egg = 2.0
