--- a/versions/ztk-versions-1.1.4.cfg
+++ b/versions/ztk-versions-1.1.4.cfg
@@ -70,7 +70,7 @@ zope.viewlet = 3.7.2
 # Deprecating
 
 # Dependencies
-distribute = 0.6.24
+distribute = 0.7.3
 docutils = 0.7
 Jinja2 = 2.5.5
 mechanize = 0.2.5
@@ -83,16 +83,16 @@ python-gettext = 1.0
 python-subunit = 0.0.7
 pytz = 2011n
 RestrictedPython = 3.6.0
-setuptools = 0.6c11
+setuptools = 0.9.8
 Sphinx = 1.0.8
 testtools = 0.9.12
 transaction = 1.1.1
 z3c.recipe.sphinxdoc = 0.0.8
-zc.buildout = 1.5.2
+zc.buildout = 2.2.0
 zc.lockfile = 1.0.0
 ZConfig = 2.8.0
-zc.recipe.egg = 1.3.2
-zc.recipe.testrunner = 1.4.0
+zc.recipe.egg = 2.0.0
+zc.recipe.testrunner = 2.0
 zc.resourcelibrary = 1.3.4
 zdaemon = 2.0.4
 ZODB3 = 3.10.5
