Improve bootstrapping, self-updating, self-installing code.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,25 @@
 [buildout]
-parts = batou tags
+parts = batou tags requirements
 extends = versions.cfg
 develop = .
+
+# XXX careful: using mr.developer can easily cause brown-bag releases as the
+# requirements.txt will be screwed up.
 
 [tags]
 recipe = z3c.recipe.tag:tags
 eggs = ${batou:eggs}
+
 
 [batou]
 recipe = zc.recipe.egg
 eggs = batou
        flake8
        sphinx
+       zest.releaser
 interpreter = py
 dependent-scripts = true
+
+
+[requirements]
+recipe = batou:requirements
