--- a/versions.cfg
+++ b/versions.cfg
@@ -42,6 +42,7 @@ z3c.recipe.tag = 0.7
 zc.buildout = 2.2
 zc.recipe.egg = 2.0.0
 zc.recipe.testrunner = 2.0.0
+zest.releaser = 3.46
 zope.cachedescriptors = 4.0.0
 zope.exceptions = 4.0.6
 zope.interface = 4.0.5
