bind supervisor to unix port

--- a/src/batou/lib/resources/supervisor.conf
+++ b/src/batou/lib/resources/supervisor.conf
@@ -9,13 +9,14 @@ umask = 022
 nodaemon = false
 nocleanup = false
 
-[inet_http_server]
-port = {{component.address.listen}}
+[unix_http_server]
+file = {{component.workdir}}/supervisor.sock
+chmod = 0770
 username = 
-password = 
+password =
 
 [supervisorctl]
-serverurl = http://{{component.address.connect}}
+serverurl = unix://{{component.workdir}}/supervisor.sock
 username = 
 password = 
 
