--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,9 +17,15 @@ eggs = batou
        flake8
        sphinx
        zest.releaser
+       mock
+       pytest
+       pytest-cache
+       pytest-capturelog
+       pytest-codecheckers
+       pytest-cov
+       pytest-timeout
 interpreter = py
 dependent-scripts = true
-
 
 [requirements]
 recipe = batou:requirements
