--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -6,13 +6,13 @@ allow-picked-versions = false
 
 [versions]
 collective.recipe.supervisor = 0.17
-distribute = 0.6.40
+setuptools = 1.1
 meld3 = 0.6.8
 nagiosplugin = 0.4.5
 superlance = 0.7
-supervisor = 3.0b1
-zc.buildout = 1.5.2
-zc.recipe.egg = 1.2.2
+supervisor = 3.0
+zc.buildout = 2.2
+zc.recipe.egg = 2.0
 
 [nagiosplugin]
 recipe = zc.recipe.egg
