--- a/versions.cfg
+++ b/versions.cfg
@@ -1,6 +1,6 @@
 # this is separated from the main buildout config file to support our examples.
 [buildout]
-index = http://f.pypi.python.org/simple
+index = http://pypi.gocept.com/simple
 allow-picked-versions = false
 show-picked-versions = true
 versions = versions
@@ -34,12 +34,12 @@ pytest-capturelog = 0.7
 pytest-codecheckers = 0.2
 pytest-cov = 1.6
 pytest-timeout = 0.3
-setuptools = 0.8
+setuptools = 1.1.6
 six = 1.3.0
 sphinx = 1.1.3
 z3c.recipe.tag = 0.7
-zc.buildout = 2.2
-zc.recipe.egg = 2.0.0
+zc.buildout = 2.2.1
+zc.recipe.egg = 2.0.1
 zc.recipe.testrunner = 2.0.0
 zest.releaser = 3.46
 zope.cachedescriptors = 4.0.0
