maybe fix test runs on linux jenkins: pin setuptools version

--- a/src/batou/lib/tests/buildout-example.cfg
+++ b/src/batou/lib/tests/buildout-example.cfg
@@ -1,7 +1,11 @@
 [buildout]
 parts = app
+versions = versions
 
 [app]
 recipe = zc.recipe.egg
 eggs = zc.buildout
 interpreter = py
+
+[versions]
+setuptools = 1.0
