Use python-requests to support basic auth.

--- a/examples/venvs/components/py24/buildout.cfg
+++ b/examples/venvs/components/py24/buildout.cfg
@@ -1,6 +1,11 @@
 [buildout]
 parts = configobj
 index = http://pypi.gocept.com/simple
+versions = versions
+
+[versions]
+setuptools = 1.4.2
+configobj = 4.7.2
 
 [configobj]
 recipe = zc.recipe.egg
