--- a/src/batou/lib/resources/nagios.cfg
+++ b/src/batou/lib/resources/nagios.cfg
@@ -9,6 +9,9 @@ define service {
     service_description {{service.description}}
     check_command {{service.check_command}}
     servicegroups {{service.servicegroups}}
+{% if service.contact_groups %}
+    contact_groups {{service.contact_groups|join(',')}}
+{% endif -%}
 {% if service.notes_url %}
     notes_url {{service.notes_url}}
 {% endif -%}
