Stabilize test by pinning all versions

--- a/src/batou/lib/tests/buildout-example.cfg
+++ b/src/batou/lib/tests/buildout-example.cfg
@@ -1,6 +1,7 @@
 [buildout]
 parts = app
 versions = versions
+allow-picked-versions = false
 
 [app]
 recipe = zc.recipe.egg
@@ -9,3 +10,5 @@ interpreter = py
 
 [versions]
 setuptools = 1.0
+zc.buildout = 2.2.1
+zc.recipe.egg = 2.0.1
