Another snapshot on the way to 1.1.
Finish local/remote refactorings by making everything remote. Local deployments are now also using the execnet remoting layer through popen. This makes the code more testable and
requires fewer special cases.

Work on the remote output management to show actual changes. There is still more work to do, but I think I may have a green bar at the moment.

--- a/examples/errors/environments/override-conversion-error.cfg
+++ b/examples/errors/environments/override-conversion-error.cfg
@@ -1,3 +1,6 @@
+[environment]
+connect_method = local
+
 [hosts]
 localhost = component1, component2, component3, component4, missingcomponent, cycle1, cycle2
 
