--- a/src/batou/tests/fixture/sample_service/environments/test-multiple-components.cfg
+++ b/src/batou/tests/fixture/sample_service/environments/test-multiple-components.cfg
@@ -1,7 +1,7 @@
 [hosts]
-localhost = component1, component2
-otherhost = component3
-            component4
+localhost = hello1, hello2
+otherhost = hello3
+            hello4
 thishost =
-    component5
-    component6
+    hello5
+    hello6
