--- a/examples/vagrant/environments/vagrant.cfg
+++ b/examples/vagrant/environments/vagrant.cfg
@@ -1,6 +1,8 @@
 [environment]
 connect_method = vagrant
 service_user = vagrant
+update_method = rsync
+develop = /opt/batou
 
 [hosts]
 default = test
