--- a/examples/vagrant/Vagrantfile
+++ b/examples/vagrant/Vagrantfile
@@ -9,6 +9,5 @@ Vagrant.configure(2) do |config|
   end
 
   config.vm.provision :nixos, :verbose => true, :path => "provision.nix"
-  config.vm.synced_folder "../../", "/opt/batou"
-
+  config.vm.synced_folder "../../", "/opt/batou", :mount_options => ["dmode=777","fmode=666"]
 end
