--- a/examples/vagrant/environments/vagrant.cfg
+++ b/examples/vagrant/environments/vagrant.cfg
@@ -1,6 +1,6 @@
 [environment]
 connect_method = vagrant
-service_user = vagrant
+service_user = myservice
 update_method = rsync
 develop = /opt/batou
 
