--- a/versions.cfg
+++ b/versions.cfg
@@ -28,10 +28,12 @@ pytest-cov = 1.8.1
 pytest-timeout = 0.4
 pytz = 2014.10
 requests = 2.6.0
+setuptools = 18.3.1
 six = 1.9.0
 snowballstemmer = 1.2.0
 Sphinx = 1.3
 sphinx-rtd-theme = 0.1.7
 z3c.recipe.tag = 0.8
+zc.buildout = 2.4.3
 zc.recipe.egg = 2.0.1
 zest.releaser = 3.55
