Clean up python virtualenvs, tests, etc.

--- a/examples/venvs/components/py25/buildout.cfg
+++ b/examples/venvs/components/py25/buildout.cfg
@@ -1,6 +1,11 @@
 [buildout]
 parts = pycountry
+versions = versions
 
 [pycountry]
 recipe = zc.recipe.egg
 interpreter = py
+
+[versions]
+setuptools = 1.3.2
+zc.buildout = 1.7.1
