--- a/src/batou/lib/resources/supervisor.conf
+++ b/src/batou/lib/resources/supervisor.conf
@@ -10,15 +10,15 @@ nodaemon = false
 nocleanup = false
 
 [unix_http_server]
-file = {{component.workdir}}/supervisor.sock
+file = {{component.socketpath}}
 chmod = 0770
-username = 
+username =
 password =
 
 [supervisorctl]
-serverurl = unix://{{component.workdir}}/supervisor.sock
-username = 
-password = 
+serverurl = unix://{{component.socketpath}}
+username =
+password =
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
