--- a/examples/venvs/environments/dev.cfg
+++ b/examples/venvs/environments/dev.cfg
@@ -4,4 +4,4 @@ update_method = rsync
 timeout = 30
 
 [hosts]
-localhost = py24, py25, py26, py27, py31, py32, py33
+localhost = py24, py25, py26, py27, py32, py33, py34, py35
