switch buildout index to fcio.net

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,5 +1,5 @@
 [buildout]
-index = http://pypi.gocept.com/simple
+index = https://pypi.fcio.net/simple
 allow-picked-versions = true
 show-picked-versions = true
 versions = versions
