Fix problem with hidden conversion errors.
This was especially nasty as Address objects that were overridden would
cause "invalid override for unknown attribute" messages when DNS is flaky.

--- a/examples/errors/environments/errors.cfg
+++ b/examples/errors/environments/errors.cfg
@@ -2,7 +2,7 @@
 connect_method = local
 
 [hosts]
-localhost = component1, component2, component3, component4, missingcomponent, cycle1, cycle2
+localhost = component1, component2, component3, component4, missingcomponent, cycle1, cycle2, dnsproblem
 
 [component:component1]
 do_what_is_needed = false
@@ -15,3 +15,6 @@ asdf = 1
 
 [component:nonexisting-component-section]
 asdf = 2
+
+[component:dnsproblem]
+attribute_with_problem = localhost
