--- a/src/batou/lib/resources/nagios.cfg
+++ b/src/batou/lib/resources/nagios.cfg
@@ -10,7 +10,7 @@ define service {
     check_command {{service.check_command}}
     servicegroups {{service.servicegroups}}
 {% if service.contact_groups %}
-    contact_groups {{service.contact_groups|join(',')}}
+    contact_groups {{service.contact_groups}}
 {% endif -%}
 {% if service.notes_url %}
     notes_url {{service.notes_url}}
