Document supervisor usage and simplify supervisor by making the dependencies to logrotate and nagios optional.
Show a link to our changelog when updating.

--- a/examples/django/environments/dev.cfg
+++ b/examples/django/environments/dev.cfg
@@ -2,7 +2,7 @@
 connect_method = local
 
 [hosts]
-localhost = django, supervisor, logrotate, nrpehost
+localhost = django, supervisor
 
 [vfs]
 sandbox = Developer
