Switch to http - drone.io doesn't have a fresher Python than 2.7.3  -_-

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,5 +1,5 @@
 [buildout]
-index = https://pypi.fcio.net/simple
+index = http://pypi.fcio.net/simple
 allow-picked-versions = true
 show-picked-versions = true
 versions = versions
