--- a/versions.cfg
+++ b/versions.cfg
@@ -1,39 +1,57 @@
 [buildout]
 index = http://pypi.fcio.net/simple
-allow-picked-versions = true
+allow-picked-versions = false
 show-picked-versions = true
 versions = versions
 
 [versions]
 alabaster = 0.7.7
-Babel = 1.3
+apipkg = 1.4
+Babel = 2.2.0
+bleach = 1.4.2
+buildout-versions-checker = 1.9.3
+chardet = 2.3.0
+check-manifest = 0.31
+colorama = 0.3.6
 cov-core = 1.15.0
-coverage = 3.7.1
+coverage                        = 4.0.3
 docutils = 0.12
-execnet = 1.3.0
-flake8 = 2.4.0
-Jinja2 = 2.7.3
+execnet = 1.4.1
+flake8 = 2.5.2
+funcsigs = 0.4
+futures = 3.0.4
+html5lib = 0.9999999
+Jinja2 = 2.8
 MarkupSafe = 0.23
-mccabe = 0.3
-mock = 1.0.1
-pep8 = 1.5.7
-py = 1.4.26
-pyflakes = 0.8.1
+mccabe = 0.4.0
+mock = 1.3.0
+packaging = 16.0
+pbr = 1.8.1
+pep8 = 1.7.0
+pkginfo = 1.2.1
+py = 1.4.31
+pyflakes = 1.0.0
 Pygments = 2.1
-pytest = 2.6.4
+pyparsing = 2.0.7
+pyroma = 1.8.3
+pytest = 2.8.7
 pytest-cache = 1.0
 pytest-capturelog = 0.7
 pytest-codecheckers = 0.2
-pytest-cov = 1.8.1
-pytest-timeout = 0.5
-pytz = 2014.10
-requests = 2.6.0
-setuptools = 18.3.1
-six = 1.9.0
+pytest-cov = 2.2.1
+pytest-timeout = 1.0.0
+pytz = 2015.7
+readme-renderer = 0.7.0
+requests = 2.9.1
+requests-toolbelt = 0.6.0
+setuptools = 19.7
+six = 1.10.0
 snowballstemmer = 1.2.1
 Sphinx = 1.3.5
 sphinx-rtd-theme = 0.1.9
+twine = 1.6.5
+wheel = 0.26.0
 z3c.recipe.tag = 0.8
-zc.buildout = 2.4.3
-zc.recipe.egg = 2.0.1
-zest.releaser = 3.55
+zc.buildout = 2.5.0
+zc.recipe.egg = 2.0.3
+zest.releaser = 6.6.1
