--- a/versions.cfg
+++ b/versions.cfg
@@ -1,58 +1,55 @@
 [buildout]
 index = http://pypi.fcio.net/simple
-allow-picked-versions = false
+allow-picked-versions = true
 show-picked-versions = true
 versions = versions
 
 [versions]
-alabaster = 0.7.7
+Babel = 2.4.0
+Jinja2 = 2.9.6
+MarkupSafe = 1.0
+Pygments = 2.2.0
+Sphinx = 1.6.3
+alabaster = 0.7.10
 apipkg = 1.4
-Babel = 2.2.0
-bleach = 1.4.2
-buildout-versions-checker = 1.9.3
-chardet = 2.3.0
-check-manifest = 0.31
-colorama = 0.3.6
-cov-core = 1.15.0
-coverage                        = 4.0.3
-docutils = 0.12
+certifi = 2017.4.17
+chardet = 3.0.4
+colorama = 0.3.9
+configparser = 3.5.0
+coverage = 4.4.1
+docutils = 0.13.1
+enum34 = 1.1.6
 execnet = 1.4.1
-flake8 = 2.5.2
-funcsigs = 0.4
-futures = 3.0.4
-html5lib = 0.9999999
-Jinja2 = 2.8
-MarkupSafe = 0.23
-mccabe = 0.4.0
-mock = 1.3.0
-packaging = 16.0
-pbr = 1.8.1
+flake8 = 3.3.0
+funcsigs = 1.0.2
+idna = 2.5
+imagesize = 0.7.1
+mccabe = 0.6.1
+mock = 2.0.0
+pbr = 3.1.1
 pep8 = 1.7.0
-pip = 8.1.2
-pkginfo = 1.2.1
-py = 1.4.31
-pyflakes = 1.0.0
-Pygments = 2.1
-pyparsing = 2.0.7
-pyroma = 1.8.3
-pytest = 2.8.7
+pkginfo = 1.4.1
+py = 1.4.34
+pycodestyle = 2.3.1
+pyflakes = 1.5.0
+pytest = 3.1.2
 pytest-cache = 1.0
 pytest-capturelog = 0.7
 pytest-codecheckers = 0.2
-pytest-cov = 2.2.1
-pytest-timeout = 1.0.0
-pytz = 2015.7
-readme-renderer = 0.7.0
-requests = 2.9.1
-requests-toolbelt = 0.6.0
+pytest-cov = 2.5.1
+pytest-timeout = 1.2.0
+pytz = 2017.2
+requests = 2.18.1
+requests-toolbelt = 0.8.0
 setuptools = 36.0.1
 six = 1.10.0
 snowballstemmer = 1.2.1
-Sphinx = 1.3.5
-sphinx-rtd-theme = 0.1.9
+sphinxcontrib-websupport = 1.0.1
+tqdm = 4.14.0
 twine = 1.9.1
-wheel = 0.26.0
+typing = 3.6.1
+urllib3 = 1.21.1
 z3c.recipe.tag = 0.8
-zc.buildout = 2.5.0
+zc.buildout = 2.9.4
 zc.recipe.egg = 2.0.3
 zest.releaser = 6.12.1
