--- a/.hgignore
+++ b/.hgignore
@@ -41,3 +41,6 @@ TAGS
 tags
 vagrant/.vagrant
 pip-selfcheck.json
+src/batou/secrets/tests/fixture/gnupg/.gpg-v21-migrated
+src/batou/secrets/tests/fixture/gnupg/crls.d/DIR.txt
+src/batou/secrets/tests/fixture/gnupg/private-keys-v1.d/*.key
