Update buildout and setuptools for good measure.
Update pytest-capturelog to pytest-catchlog to get rid of pytest warnings.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,7 @@ eggs = batou
        pip
        pytest
        pytest-cache
-       pytest-capturelog
+       pytest-catchlog
        pytest-codecheckers
        pytest-cov
        pytest-timeout
