--- a/versions.cfg
+++ b/versions.cfg
@@ -34,14 +34,14 @@ pycodestyle = 2.3.1
 pyflakes = 1.5.0
 pytest = 3.1.2
 pytest-cache = 1.0
-pytest-capturelog = 0.7
+pytest-catchlog = 1.2.2
 pytest-codecheckers = 0.2
 pytest-cov = 2.5.1
 pytest-timeout = 1.2.0
 pytz = 2017.2
 requests = 2.18.1
 requests-toolbelt = 0.8.0
-setuptools = 36.0.1
+setuptools = 36.7.2
 six = 1.10.0
 snowballstemmer = 1.2.1
 sphinxcontrib-websupport = 1.0.1
@@ -50,6 +50,6 @@ twine = 1.9.1
 typing = 3.6.1
 urllib3 = 1.21.1
 z3c.recipe.tag = 0.8
-zc.buildout = 2.9.4
+zc.buildout = 2.9.5
 zc.recipe.egg = 2.0.3
 zest.releaser = 6.12.1
