install dependencies for zest.releaser/longtest, and fix changelog RST

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,7 +16,7 @@ recipe = zc.recipe.egg
 eggs = batou
        flake8
        sphinx
-       zest.releaser
+       zest.releaser[recommended]
        mock
        pip
        pytest
