Cleanup: I don't think anybody needs the tags generator anymore.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,15 +1,11 @@
 [buildout]
-parts = batou tags requirements
+parts = batou
+        requirements
 extends = versions.cfg
 develop = .
 
 # XXX careful: using mr.developer can easily cause brown-bag releases as the
 # requirements.txt will be screwed up.
-
-[tags]
-recipe = z3c.recipe.tag:tags
-eggs = ${batou:eggs}
-
 
 [batou]
 recipe = zc.recipe.egg
