--- a/.hgignore
+++ b/.hgignore
@@ -44,3 +44,4 @@ pip-selfcheck.json
 src/batou/secrets/tests/fixture/gnupg/.gpg-v21-migrated
 src/batou/secrets/tests/fixture/gnupg/crls.d/DIR.txt
 src/batou/secrets/tests/fixture/gnupg/private-keys-v1.d/*.key
+.pytest_cache
