--- a/versions.cfg
+++ b/versions.cfg
@@ -1,5 +1,5 @@
 [buildout]
-index = http://pypi.fcio.net/simple
+index = https://pypi.fcio.net/simple
 allow-picked-versions = true
 show-picked-versions = true
 versions = versions
@@ -29,10 +29,10 @@ mock = 2.0.0
 pbr = 3.1.1
 pep8 = 1.7.0
 pkginfo = 1.4.1
-py = 1.4.34
+py = 1.5.2
 pycodestyle = 2.3.1
 pyflakes = 1.5.0
-pytest = 3.1.2
+pytest = 3.4.2
 pytest-cache = 1.0
 pytest-catchlog = 1.2.2
 pytest-codecheckers = 0.2
@@ -41,7 +41,7 @@ pytest-timeout = 1.2.0
 pytz = 2017.2
 requests = 2.18.1
 requests-toolbelt = 0.8.0
-setuptools = 36.7.2
+setuptools = 38.5.2
 six = 1.10.0
 snowballstemmer = 1.2.1
 sphinxcontrib-websupport = 1.0.1
@@ -50,6 +50,6 @@ twine = 1.9.1
 typing = 3.6.1
 urllib3 = 1.21.1
 z3c.recipe.tag = 0.8
-zc.buildout = 2.9.5
+zc.buildout = 2.11.1
 zc.recipe.egg = 2.0.3
 zest.releaser = 6.12.1
