--- a/versions.cfg
+++ b/versions.cfg
@@ -11,8 +11,13 @@ Pygments = 2.2.0
 Sphinx = 1.6.3
 alabaster = 0.7.10
 apipkg = 1.4
+attrs = 18.1.0
+bleach = 2.1.3
 certifi = 2017.4.17
+cffi = 1.11.5
 chardet = 3.0.4
+check-manifest = 0.37
+cmarkgfm = 0.4.2
 colorama = 0.3.9
 configparser = 3.5.0
 coverage = 4.4.1
@@ -21,6 +26,8 @@ enum34 = 1.1.6
 execnet = 1.4.1
 flake8 = 3.3.0
 funcsigs = 1.0.2
+future = 0.16.0
+html5lib = 1.0.1
 idna = 2.5
 imagesize = 0.7.1
 mccabe = 0.6.1
@@ -28,9 +35,12 @@ mock = 2.0.0
 pbr = 3.1.1
 pep8 = 1.7.0
 pkginfo = 1.4.1
+pluggy = 0.6.0
 py = 1.5.2
 pycodestyle = 2.3.1
+pycparser = 2.18
 pyflakes = 1.5.0
+pyroma = 2.4
 pytest = 3.4.2
 pytest-cache = 1.0
 pytest-catchlog = 1.2.2
@@ -38,9 +48,10 @@ pytest-codecheckers = 0.2
 pytest-cov = 2.5.1
 pytest-timeout = 1.2.0
 pytz = 2017.2
+readme-renderer = 21.0
 requests = 2.18.1
 requests-toolbelt = 0.8.0
-setuptools = 38.5.2
+setuptools = 40.0.0
 six = 1.10.0
 snowballstemmer = 1.2.1
 sphinxcontrib-websupport = 1.0.1
@@ -48,7 +59,8 @@ tqdm = 4.14.0
 twine = 1.9.1
 typing = 3.6.1
 urllib3 = 1.21.1
+webencodings = 0.5.1
 z3c.recipe.tag = 0.8
-zc.buildout = 2.11.1
+zc.buildout = 2.12.1
 zc.recipe.egg = 2.0.3
 zest.releaser = 6.12.1
