--- a/versions.cfg
+++ b/versions.cfg
@@ -1,66 +1,128 @@
 [buildout]
-allow-picked-versions = true
+allow-picked-versions = false
 show-picked-versions = true
 versions = versions
 
 [versions]
-Babel = 2.4.0
-Jinja2 = 2.10.3
-MarkupSafe = 1.0
-Pygments = 2.2.0
+Babel = 2.7.0
+MarkupSafe = 1.1.1
 PyYAML = 5.1.2
-Sphinx = 1.6.3
-alabaster = 0.7.10
-apipkg = 1.4
-attrs = 18.1.0
-bleach = 2.1.3
-certifi = 2017.4.17
-cffi = 1.11.5
+Pygments = 2.4.2
+Sphinx = 2.2.0
+alabaster = 0.7.12
+apipkg = 1.5
+atomicwrites = 1.3.0
+attrs = 19.1.0
+bleach = 3.1.0
+certifi = 2019.6.16
 chardet = 3.0.4
-check-manifest = 0.37
-cmarkgfm = 0.4.2
-colorama = 0.3.9
-configparser = 3.5.0
-coverage = 4.4.1
-docutils = 0.13.1
-enum34 = 1.1.6
-execnet = 1.4.1
-flake8 = 3.3.0
-funcsigs = 1.0.2
-future = 0.16.0
-html5lib = 1.0.1
-idna = 2.5
-imagesize = 0.7.1
+check-manifest = 0.39
+coverage = 4.5.4
+docutils = 0.15.2
+entrypoints = 0.3
+flake8 = 3.7.8
+idna = 2.8
+importlib-metadata = 0.20
 mccabe = 0.6.1
-mock = 2.0.0
-pbr = 3.1.1
-pep8 = 1.7.0
-pkginfo = 1.4.2
-pluggy = 0.6.0
-py = 1.5.2
-pycodestyle = 2.3.1
-pycparser = 2.18
-pyflakes = 1.5.0
-pyroma = 2.4
-pytest = 3.4.2
+mock = 3.0.5
+more-itertools = 7.2.0
+pathlib2 = 2.3.4
+pkginfo = 1.5.0.1
+pluggy = 0.12.0
+pycodestyle = 2.5.0
+pyflakes = 2.1.1
+pyparsing = 2.4.2
+pyroma = 2.5
+pytest = 5.1.2
 pytest-cache = 1.0
 pytest-codecheckers = 0.2
-pytest-cov = 2.5.1
-pytest-timeout = 1.2.0
-pytz = 2017.2
-readme-renderer = 21.0
-requests = 2.22.0
-requests-toolbelt = 0.8.0
-setuptools = 40.0.0
-six = 1.10.0
-snowballstemmer = 1.2.1
-sphinxcontrib-websupport = 1.0.1
-tqdm = 4.14.0
-twine = 1.11.0
-typing = 3.6.1
-urllib3 = 1.25.6
-webencodings = 0.5.1
-z3c.recipe.tag = 0.8
-zc.buildout = 2.13.1
+pytest-cov = 2.7.1
+pytest-timeout = 1.3.3
+pytz = 2019.2
+readme-renderer = 24.0
+requests-toolbelt = 0.9.1
+snowballstemmer = 1.9.0
+tqdm = 4.35.0
+twine = 1.13.0
+urllib3 = 1.25.3
+wheel = 0.33.6
 zc.recipe.egg = 2.0.7
-zest.releaser = 6.18.2
+zest.releaser = 6.19.1
+zipp = 0.6.0
+
+# Required by:
+# batou==1.12.0.dev0
+Jinja2 = 2.10.1
+
+# Required by:
+# zest.releaser==6.19.1
+colorama = 0.4.1
+
+# Required by:
+# batou==1.12.0.dev0
+execnet = 1.7.1
+
+# Required by:
+# Sphinx==2.2.0
+imagesize = 1.1.0
+
+# Required by:
+# Sphinx==2.2.0
+# pytest==5.1.2
+packaging = 19.1
+
+# Required by:
+# pytest-codecheckers==0.2
+pep8 = 1.7.1
+
+# Required by:
+# batou==1.12.0.dev0
+py = 1.8.0
+
+# Required by:
+# batou==1.12.0.dev0
+# zest.releaser==6.19.1
+requests = 2.22.0
+
+# Required by:
+# mock==3.0.5
+# packaging==19.1
+# pathlib2==2.3.4
+# zest.releaser==6.19.1
+six = 1.12.0
+
+# Required by:
+# Sphinx==2.2.0
+sphinxcontrib-applehelp = 1.0.1
+
+# Required by:
+# Sphinx==2.2.0
+sphinxcontrib-devhelp = 1.0.1
+
+# Required by:
+# Sphinx==2.2.0
+sphinxcontrib-htmlhelp = 1.0.2
+
+# Required by:
+# Sphinx==2.2.0
+sphinxcontrib-jsmath = 1.0.1
+
+# Required by:
+# Sphinx==2.2.0
+sphinxcontrib-qthelp = 1.0.2
+
+# Required by:
+# Sphinx==2.2.0
+sphinxcontrib-serializinghtml = 1.1.3
+
+# Required by:
+# check-manifest==0.39
+toml = 0.10.0
+
+# Required by:
+# pytest==5.1.2
+wcwidth = 0.1.7
+
+# Required by:
+# bleach==3.1.0
+webencodings = 0.5.1
