--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,19 @@
-*.egg-info
-*.pyc
-*.sublime-*
-*.swo
-*.swp
-.batou
-.batou-lock
-.batou-passphrase
-.batou.buildout.success
-.cache
-.coverage
-.DS_Store
 .installed.cfg
-.mr.developer.cfg
-.pytest_cache
-.Python
-.vagrant
-bin
-build
-coverage
-develop-eggs
-dist
-doc/_api
-eggs
-examples/*/.batou-lock
-examples/*/local
-examples/*/work
-htmlcov
-ID
-include/python2.*
+__pycache__/
+bin/
+develop-eggs/
+eggs/
 lib/
-lib/python2.*
-lib64
-local
-local.cfg
-my-buildout.cfg
-parts
 pip-selfcheck.json
 pyvenv.cfg
+*src/batou.egg-info/
+__pycache__/
+.coverage
+htmlcov
+*.pyc
+.batou
 report.xml
-src/batou/secrets/tests/fixture/gnupg/.gpg-v21-migrated
-src/batou/secrets/tests/fixture/gnupg/crls.d/DIR.txt
-src/batou/secrets/tests/fixture/gnupg/private-keys-v1.d/*.key
 src/batou/secrets/tests/fixture/gnupg/random_seed
-TAGS
-tags
-vagrant/.vagrant
+src/batou/secrets/tests/fixture/gnupg/private-keys*/*.key
+src/batou/secrets/tests/fixture/gnupg/crls.d
+src/batou/secrets/tests/fixture/gnupg/.gpg-v21-migrated
