--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 python:
   - "2.7"
-
+addons:
+  apt:
+    packages:
+      - python3-venv
 install:
   - ./bootstrap.sh
   - bin/buildout
