--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
-  - "2.7"
-addons:
-  apt:
-    packages:
-      - python3-venv
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "3.8-dev"
+  - "nightly"
 install:
   - ./bootstrap.sh
   - bin/buildout
