--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
   - "3.8-dev"
   - "nightly"
 install:
-  - pip install zc.buildout
-  - buildout
+  - ./bootstrap.sh
+  - bin/buildout
 
 script:
   - bin/pytest -vv
