--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,23 @@
-language: python
-python:
-  - "3.5"
-  - "3.6"
-  - "3.7"
-  - "3.8-dev"
-  - "nightly"
+language: generic
+matrix:
+  include:
+    - name: "Python 3.5"
+      python: 3.5
+  include:
+    - name: "Python 3.6"
+      python: 3.6
+  include:
+    - name: "Python 3.7"
+      python: 3.7
+  include:
+    - name: "Python 3.8-dev"
+      python: 3.8-dev
+  include:
+    - name: "Python nightly"
+      python: nightly
 install:
+  - curl -sSf -o https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$python.tar.bz2
+  - sudo tar xjf python-$python.tar.bz2 --directory /
   - ./bootstrap.sh
-  - bin/buildout
-
 script:
   - bin/pytest -vv
