--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,21 @@ language: generic
 matrix:
   include:
     - name: "Python 3.5"
-      python: 3.5
+      env: PYTHON=3.5
   include:
     - name: "Python 3.6"
-      python: 3.6
+      env: PYTHON=3.6
   include:
     - name: "Python 3.7"
-      python: 3.7
+      env: PYTHON=3.7
   include:
     - name: "Python 3.8-dev"
-      python: 3.8-dev
+      env: PYTHON=3.8-dev
   include:
     - name: "Python nightly"
-      python: nightly
-install:
-  - curl -sSf -o https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$python.tar.bz2
+      env: PYTHON=nightly
+script:
+  - curl -sSf -o https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
   - sudo tar xjf python-$python.tar.bz2 --directory /
   - ./bootstrap.sh
-script:
   - bin/pytest -vv
