--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,16 @@ matrix:
   include:
     - name: "Python 3.5"
       env: PYTHON=3.5
-  include:
     - name: "Python 3.6"
       env: PYTHON=3.6
-  include:
     - name: "Python 3.7"
       env: PYTHON=3.7
-  include:
     - name: "Python 3.8-dev"
       env: PYTHON=3.8-dev
-  include:
     - name: "Python nightly"
       env: PYTHON=nightly
 script:
-  - curl -sSf -o https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
-  - sudo tar xjf python-$python.tar.bz2 --directory /
+  - curl -sSf -o python-#PYTHON.tar.bz2 https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
+  - sudo tar xjf python-$PYTHON.tar.bz2 --directory /
   - ./bootstrap.sh
   - bin/pytest -vv
