--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
     - name: "Python nightly"
       env: PYTHON=nightly
 script:
-  - curl -sSf -o python-#PYTHON.tar.bz2 https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
+  - curl -sSf -o python-$PYTHON.tar.bz2 https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
   - sudo tar xjf python-$PYTHON.tar.bz2 --directory /
   - ./bootstrap.sh
   - bin/pytest -vv
