--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,26 @@ language: generic
 matrix:
   include:
     - name: "Python 3.5"
-      env: PYTHON=3.5
+      env:
+        - PYTHON=3.5
+        - PYTHONCMD=python3.5
     - name: "Python 3.6"
-      env: PYTHON=3.6
+      env:
+        - PYTHON=3.6
+        - PYTHONCMD=python3.6
     - name: "Python 3.7"
-      env: PYTHON=3.7
+      env:
+        - PYTHON=3.7
+        - PYTHONCMD=python3.7
     - name: "Python 3.8-dev"
-      env: PYTHON=3.8-dev
+      env:
+        - PYTHON=3.8-dev
+        - PYTHONCMD=python3.8
     - name: "Python nightly"
-      env: PYTHON=nightly
+      env: PYTHON=python3.8
 script:
   - sudo apt-get install python3-venv
   - curl -sSf -o python-$PYTHON.tar.bz2 https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
   - sudo tar xjf python-$PYTHON.tar.bz2 --directory /
-  - ./bootstrap.sh $PYTHON
+  - ./bootstrap.sh "$PYTHONCMD"
   - bin/pytest -vv
