--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ script:
   - sudo apt-get install python3-venv
   - curl -sSf -o python-$PYTHON.tar.bz2 https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
   - sudo tar xjf python-$PYTHON.tar.bz2 --directory /
-  - ./bootstrap.sh "$PYTHONCMD"
+  - ./bootstrap.sh "/home/travis/virtualenv/python$PYTHON/bin/$PYTHONCMD"
   - bin/pytest -vv
