--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,9 @@ matrix:
         - PYTHONCMD=python3.8
     - name: "Python nightly"
       env:
-        - PYTHON=python-nightly
+        - PYTHON=nightly
         - PYTHONCMD=python3.8
 script:
-  - sudo apt-get install python3-venv
   - curl -sSf -o python-$PYTHON.tar.bz2 https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
   - sudo tar xjf python-$PYTHON.tar.bz2 --directory /
   - ./bootstrap.sh "/opt/python/$PYTHON/bin/$PYTHONCMD"
