--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --timeout=30 --tb=native --cov=src --cov-report=html --junitxml=report.xml  -m 'not jenkinsonly'
+addopts = -W error --timeout=30 --tb=native --cov=src --cov-report=html --junitxml=report.xml  -m 'not jenkinsonly'
 markers = slow: This is a non-unit test and thus is not run by default. Use ``-m slow`` to run these, or ``-m 1`` to run all tests.
 		  jenkinsonly: This requires elaborate setup and we will only run it in jenkins.
 testpaths = src
