--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,7 +17,7 @@ eggs = batou
        pip
        pytest
        pytest-cache
-       pytest-codecheckers
+       pytest-flake8
        pytest-cov
        pytest-timeout
 interpreter = py
