--- a/versions.cfg
+++ b/versions.cfg
@@ -49,6 +49,7 @@ wheel = 0.33.6
 zc.recipe.egg = 2.0.7
 zest.releaser = 6.19.1
 zipp = 0.6.0
+pytest-flake8 = 1.0.4
 
 # Required by:
 # batou==1.12.0.dev0
