--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ src/batou/secrets/tests/fixture/gnupg/crls.d
 src/batou/secrets/tests/fixture/gnupg/.gpg-v21-migrated
 *.sublime-*
 .batou-lock
+.vagrant
+examples/*/work
