--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,18 @@ matrix:
       env:
         - PYTHON=3.7
         - PYTHONCMD=python3.7
-    - name: "Python 3.8-dev"
+    - name: "Python 3.8"
       env:
-        - PYTHON=3.8-dev
+        - PYTHON=3.8
         - PYTHONCMD=python3.8
+    - name: "Python 3.9-dev"
+      env:
+        - PYTHON=3.9-dev
+        - PYTHONCMD=python3.9
     - name: "Python nightly"
       env:
         - PYTHON=nightly
-        - PYTHONCMD=python3.8
+        - PYTHONCMD=python3.9
 script:
   - sudo apt-get install python3-venv libyaml-dev
   - curl -sSf -o python-$PYTHON.tar.bz2 https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
