Prepare switch to appenv-based bootstrapping.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,26 @@
+*.pyc
+*.sublime-*
+*src/batou.egg-info/
+.batou
+.batou-lock
+.coverage
 .installed.cfg
-__pycache__/
 .pytest_cache
+.vagrant
+__pycache__/
 bin/
 develop-eggs/
+doc/build
 eggs/
+examples/*/work
+htmlcov/
+include/
 lib/
 pip-selfcheck.json
 pyvenv.cfg
-*src/batou.egg-info/
-__pycache__/
-.coverage
-htmlcov
-*.pyc
-.batou
 report.xml
-src/batou/secrets/tests/fixture/gnupg/random_seed
-src/batou/secrets/tests/fixture/gnupg/private-keys*/*.key
-src/batou/secrets/tests/fixture/gnupg/crls.d
 src/batou/secrets/tests/fixture/gnupg/.gpg-v21-migrated
-*.sublime-*
-.batou-lock
-.vagrant
-examples/*/work
-doc/build
+src/batou/secrets/tests/fixture/gnupg/crls.d
+src/batou/secrets/tests/fixture/gnupg/private-keys*/*.key
+src/batou/secrets/tests/fixture/gnupg/random_seed
+
