--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 addopts = -W error --flake8 --timeout=45 --tb=native --cov=src --cov-report=html --junitxml=report.xml
-markers = slow: This is a non-unit test and thus is not run by default. Use ``-m slow`` to run these, or ``-m 1`` to run all tests.
+markers = slow: This is a slow test.
 testpaths = src
