Clean up gitignore - it was accidentally ignoring new files in src/batou/lib/*

--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,19 @@
 .installed.cfg
 .pytest_cache
 .vagrant
-__pycache__/
-bin/
-develop-eggs/
-doc/build
-eggs/
-examples/*/work
-htmlcov/
-include/
-lib/
+/bin
+/develop-eggs
+/doc/build
+/eggs
+/examples/*/work
+/htmlcov
+/include
+/lib
+/src/batou/secrets/tests/fixture/gnupg/.gpg-v21-migrated
+/src/batou/secrets/tests/fixture/gnupg/crls.d
+/src/batou/secrets/tests/fixture/gnupg/private-keys*/*.key
+/src/batou/secrets/tests/fixture/gnupg/random_seed
+__pycache__
 pip-selfcheck.json
 pyvenv.cfg
 report.xml
-src/batou/secrets/tests/fixture/gnupg/.gpg-v21-migrated
-src/batou/secrets/tests/fixture/gnupg/crls.d
-src/batou/secrets/tests/fixture/gnupg/private-keys*/*.key
-src/batou/secrets/tests/fixture/gnupg/random_seed
-
