--- a/versions.cfg
+++ b/versions.cfg
@@ -41,6 +41,7 @@ pytest-timeout = 1.3.3
 pytz = 2019.2
 readme-renderer = 24.0
 requests-toolbelt = 0.9.1
+requirements-parser = 0.2.0
 snowballstemmer = 1.9.0
 tqdm = 4.35.0
 twine = 1.13.0
