Allow specifying the service_user attribute per host.

--- a/src/batou/tests/fixture/sample_service/environments/test-with-env-config.cfg
+++ b/src/batou/tests/fixture/sample_service/environments/test-with-env-config.cfg
@@ -3,3 +3,7 @@ connect_method = local
 service_user = joe
 host_domain = example.com
 branch = release
+
+[host:foo1]
+service_user = bob
+components = hello
