Fix changelog inclusion in docs, provide guidelines for upgrading existing projects. Fixes #8

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,6 +12,7 @@ recipe = zc.recipe.egg
 eggs = batou
        flake8
        sphinx
+       recommonmark
        zest.releaser[recommended]
        mock
        pip
