--- a/versions.cfg
+++ b/versions.cfg
@@ -50,7 +50,8 @@ zc.recipe.egg = 2.0.7
 zest.releaser = 6.19.1
 zipp = 0.6.0
 pytest-flake8 = 1.0.4
-
+recommonmark = 0.6.0
+commonmark = 0.9.1
 # Required by:
 # batou==1.12.0.dev0
 Jinja2 = 2.10.1
