--- a/examples/vagrant/Vagrantfile
+++ b/examples/vagrant/Vagrantfile
@@ -2,7 +2,8 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = "flyingcircus/nixos-14.12-i686"
+  config.vm.box = "flyingcircus/nixos-19.03-dev-x86_64"
+  config.vm.box_version = "= 471.427aac1"
   config.vm.network "private_network", ip: "192.168.50.4"
   config.vm.provider "virtualbox" do |v|
     v.memory = 1024
