--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,7 +18,7 @@ eggs = batou
        pip
        pytest
        pytest-cache
-       pytest-flake8
+       pytest-black
        pytest-cov
        pytest-timeout
 interpreter = py
