--- a/versions.cfg
+++ b/versions.cfg
@@ -129,3 +129,10 @@ wcwidth = 0.1.7
 # bleach==3.1.0
 webencodings = 0.5.1
 ConfigUpdater = 1.1
+pytest-black = 0.3.10
+black = 19.10b0
+typed-ast = 1.4.1
+regex = 2020.7.14
+pathspec = 0.8.0
+click = 7.1.2
+appdirs = 1.4.4
