--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -W error --flake8 --timeout=45 --tb=native --cov=src --cov-report=html --junitxml=report.xml
+addopts = -W error --black --timeout=45 --tb=native --cov=src --cov-report=html --junitxml=report.xml
 markers = slow: This is a slow test.
 testpaths = src
