--- a/versions.cfg
+++ b/versions.cfg
@@ -28,12 +28,12 @@ mock = 3.0.5
 more-itertools = 7.2.0
 pathlib2 = 2.3.4
 pkginfo = 1.5.0.1
-pluggy = 0.12.0
+pluggy = 0.13.1
 pycodestyle = 2.5.0
 pyflakes = 2.1.1
 pyparsing = 2.4.2
 pyroma = 2.5
-pytest = 5.2.1
+pytest = 6.0.1
 pytest-cache = 1.0
 pytest-codecheckers = 0.2
 pytest-cov = 2.7.1
@@ -79,7 +79,7 @@ pep8 = 1.7.1
 
 # Required by:
 # batou==1.12.0.dev0
-py = 1.8.0
+py = 1.9.0
 
 # Required by:
 # batou==1.12.0.dev0
@@ -136,3 +136,7 @@ regex = 2020.7.14
 pathspec = 0.8.0
 click = 7.1.2
 appdirs = 1.4.4
+
+# Required by:
+# pytest==6.0.1
+iniconfig = 1.0.1
